chat_page.css
/*
  color 1: 80ED99
  color 2: 57CC99
  color 3: 38A3A5
  color 4: 22577A
*/

* {
  box-sizing: border-box;
}

html, body {
  height: 100%;
}

body {
  margin: 0px;
  background-color: #203A4C;
  font-family: sans-serif;
  color: white;
}

header {
  width: 95%;
  height: 12%;
  display: flex;
  align-items: center;
  margin-left: auto;
  margin-right: auto;
  padding-top: 1%;
}

.header_nav {
  width: 8%;
  height: 100%;
  background-color: #22577A;
  margin-left: 1%;
  border-radius: 20px;
  transition: 0.3s;
  text-align: center;
}

.header_nav:hover {
  background-color: #38A3A5;
}

#header_home {
  margin-right: 5%;
  margin-left: 0px;
  background-image: url("./img/SicherInAlbstadt-Logo.svg");
  background-size: 70%;
  background-repeat: no-repeat;
  background-position: center;
}

#header_chat {
  background-image: url("./icons/chat.svg");
  background-size: 50%;
  background-repeat: no-repeat;
  background-position: center;
}

#header_chat_text {
  margin-top: 23%;
}

#header_how_it_works {
  background-image: url("./icons/lightblulb.svg");
  background-size: 40%;
  background-repeat: no-repeat;
  background-position: center;
}

#header_donate {
  background-image: url("./icons/present.svg");
  background-size: 50%;
  background-repeat: no-repeat;
  background-position: center;
}

#header_impressum {
  background-image: url("./icons/location.svg");
  background-size: 50%;
  background-repeat: no-repeat;
  background-position: center;
}

#header_logout {
  margin-left: auto;
  background-color: #203A4C;
  background-image: url("./img/lock_closed.svg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

#header_logout:hover {
  background-image: url("./img/lock_closed_light.svg");
}

main {
  width: 100%;
  height: 80%;
  border: solid;
  border-color: blue;
  display: flex;
  justify-content: space-around;
  align-items: center;

  margin-top: 1%;
}

#chat_list {
  width: 20%;
  height: 100%;
  border: solid;
  border-color: red;
}

#chat_list_header {
  justify-content: center;
  pointer-events: none;
}

.chat_list_element {
  width: 100%;
  height: 10%;
  border-bottom: solid;
  border-radius: 20px;
  border-color: red;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.chat_list_element:hover {
  background-color: #38A3A5;
}

.chat_list_element div {
  margin-left: 2%;
  margin-right: 2%;
}

#chat {
  width: 70%;
  height: 100%;
  border: solid;
  border-color: green;
}

#chat_header {
  width: 100%;
  height: 20%;
  border-bottom: solid;
  border-color: green;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

#chat_header_name {
  font-size: 200%;
  margin-left: 1%;
}

#chat_header_last_seen {
  margin-top: auto;
  margin-left: auto;
  margin-right: 1%;
}

#chat_main {
  width: 100%;
  height: 60%;
  border-bottom: solid;
  border-color: magenta;
  overflow-y: scroll;
}

.chat_bubble {
  /*border: solid;
  border-color: yellow;*/
  width: 100%;
}

.chat_bubble_sent div {
  width: 40%;
  margin-left: auto;
  margin-right: 2%;
  margin-top: 1%;
  margin-bottom: 1%;

  background-color: #22577A;
  border-radius: 20px;
  padding: 2%;
}

.chat_bubble_received div {
  width: 40%;
  margin-right: auto;
  margin-left: 2%;
  margin-top: 1%;
  margin-bottom: 1%;

  background-color: #22577A;
  border-radius: 20px;
  padding: 2%;
}

#chat_input {
  width: 100%;
  height: 20%;
  border-bottom: solid;
  border-color: green;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

#chat_input_field {
  width: 80%;
  height: 90%;
  padding: 2%;
  resize: none;
  border: none;
  border-radius: 20px;
  outline: none;
  color: white;
  background-color: #22577A;
}

#chat_input_button {
  width: 10%;
  height: 70%;
  border: none;
  border-radius: 20px;
  background-color: #22577A;
  color: white;
}

#chat_input_button:hover {
  background-color: #38A3A5;
}

footer {
  width: 100%;
  height: 5%;
  position: absolute;
  bottom: 0;
  background-color: #22577A;
  display: flex;
  justify-content: center;
  align-items: center;
}

